<?xml version="1.0"?>
<package format="3">
  <name>automatic_mover</name>
  <version>0.0.0</version>
  <description>Robotu hedefe götüren Python node</description>
  <maintainer email="fatih@todo.todo">fatih</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
